[project]
name = "crypto-alpha-lab"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "polars>=0.20",
  "numpy>=1.26",
  "statsmodels>=0.14",
  "prophet>=1.1",
  "ta>=0.11.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "streamlit>=1.37",
  "sqlalchemy>=2.0",
  "duckdb>=1.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "pytest-cov"]